tests/ui/proc-macro/derive-helper-legacy-spurious.stderr
error: cannot find attribute `dummy` in this scope
  --> $DIR/derive-helper-legacy-spurious.rs:3:4
   |
LL | #![dummy]
   |    ^^^^^

error: aborting due to 1 previous error

